--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<meta charset="utf-8">
 	<title></title>
 </head>
 <body>
-	<img src="laptop.png">
-	<h1> COMING SOON! </h1>
+	<div id="container">	
+		<img id="logo" src="laptop.png">
+		<h1> COMING SOON! </h1>
+	</div>
+
 </body>
 </html>
