--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 	<div id="container">	
 		<img id="logo" src="laptop.png">
-		<h1> COMING SOON! </h1>
+		<h1> COMING SOON! Now! </h1>
 	</div>
 
 </body>
